--- a/dev/styles/base.scss
+++ b/dev/styles/base.scss
@@ -1,19 +1,23 @@
-.bd-notification {
-  border-radius: 3px;
-  padding: 1.25rem 0;
-  position: relative;
-  text-align: center;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 html, body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1.4;
   height: 100%;
-  background: #ECF0F3;
+  width: 100%;
+  background-color: $color-bg;
 }
+
 nav.navbar {
-  border-top: 4px solid #276cda;
+  border-top: 4px solid $color-darkblue;
   margin-bottom: 1rem;
 }
 .navbar-item.brand-text {
@@ -24,7 +28,7 @@ nav.navbar {
   font-weight: 700;
 }
 .menu-label {
-  color: #8F99A3;
+  color: $color-darkgrey;
   letter-spacing: 1.3;
   font-weight: 700;
 }
@@ -35,11 +39,11 @@ nav.navbar {
 }
 .menu-list a:hover {
   background-color: transparent;
-  color: #276cda;
+  color: $color-darkblue;
 }
 .menu-list a.is-active {
   background-color: transparent;
-  color: #276cda;
+  color: $color-darkblue;
   font-weight: 700;
 }
 .card {
@@ -55,15 +59,14 @@ nav.navbar {
 }
 .info-tiles .subtitle {
   font-weight: 300;
-  color: #8F99A3;
+  color: $color-darkgrey;
 }
 .hero.welcome.is-info {
-  background: #36D1DC;
-  background: -webkit-linear-gradient(to right, #5B86E5, #36D1DC);
-  background: linear-gradient(to right, #5B86E5, #36D1DC);
+  background: $color-skyblue;
+  background: linear-gradient(to right, $color-darkblue, $color-skyblue);
 }
 .hero.welcome .title, .hero.welcome .subtitle {
-  color: hsl(192, 17%, 99%);
+  color: $color-lightgrey;
 }
 .card .content {
   font-size: 14px;
@@ -71,7 +74,7 @@ nav.navbar {
 .card-footer-item {
   font-size: 14px;
   font-weight: 700;
-  color: #8F99A3;
+  color: $color-darkgrey;
 }
 .card-footer-item:hover {
 }
@@ -82,18 +85,15 @@ nav.navbar {
   border-bottom-width: 0px;
 }
 .bd-notification {
+  position: relative;
   display: block;
-  background-color: #4FC3F7;
+  padding: 1.25rem 0;
+  background-color: $color-lightblue;
   text-transform: uppercase;
   color: white;
+  border-radius: 3px;
 }
 
-/*
-.events-card .card-table {
-  max-height: 250px;
-  overflow-y: scroll;
-}
-*/
 .red, .red .table.is-striped tbody tr:not(.is-selected):nth-child(2n) {
   background-color: #ffcdd2;
 }
@@ -127,7 +127,7 @@ nav.navbar {
 .terminal {
   background-color: #333;
   border-radius: 5px;
-  color: #fff;
+  color: white;
 }
 .command:before {
   content: "$ ";
@@ -139,7 +139,7 @@ nav.navbar {
   content: "# ";
 }
 .comment {
-  color: #ccc;
+  color: $color-lightgrey;
 }
 p, pre {
   margin-top: 16px;
