--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -1,3 +1,11 @@
 @import "node_modules/bulma/bulma";
+@import "node_modules/normalize.css/normalize";
+@import "node_modules/sass-mq/mq";
+
 @import "fonts";
+@import "colors";
 @import "base";
+
+@import "partials/hero";
+@import "partials/page";
+@import "partials/buttons";
