--- a/dev/views/partials/navbar.pug
+++ b/dev/views/partials/navbar.pug
@@ -2,13 +2,11 @@ mixin navbar( title, github )
   nav.navbar.is-white
     .container
       .navbar-brand
-        a.navbar-item.brand-text 
+        a.navbar-item.brand-text(href=".")
           = title
       
       #navMenu.navbar-menu
         .navbar-start
-          a.navbar-item(href=".")
-            | Project page
           a.navbar-item(href=github)
             | Source code
           a.navbar-item(href=github + "/issues")
